<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="none">
        <!-- checkableBehavior set to none to clear last selection memory -->

        <item
            android:title=""/>

        <item
            android:id="@+id/activity_main_drawer_lunch"
            android:icon="@drawable/ic_baseline_local_dining_white_24"
            android:title="@string/drawer_menu_lunch"/>

        <item
            android:id="@+id/activity_main_drawer_settings"
            android:icon="@drawable/ic_baseline_settings_white_24"
            android:title="@string/drawer_menu_settings"/>

        <item
            android:id="@+id/activity_main_drawer_logout"
            android:icon="@drawable/ic_baseline_power_settings_new_white_24"
            android:title="@string/drawer_menu_logout"/>

        <item
            android:title=""/>

        <item
            android:id="@+id/activity_main_drawer_delete_account"
            android:icon="@drawable/ic_baseline_delete_forever_white_24"
            android:title="@string/drawer_menu_delete_account"/>

    </group>

</menu>