<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_setting_rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SettingsFragment"
    android:orientation="vertical">

    <!-- Logo -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/app_background"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/ic_go4lunch"
        android:contentDescription="@string/ic_app_logo"/>

    <!-- Title -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@color/app_background"
            android:paddingStart="12dp"
            android:paddingEnd="6dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@color/app_background"
            android:paddingStart="6dp"
            android:paddingEnd="12dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/settings_title"/>

    </LinearLayout>

    <!-- L1 - Search radius -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="6dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/settings_radius"/>

        <EditText
            android:id="@+id/et_radius"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:inputType="number"
            android:autofillHints=""
            android:hint="@string/settings_radius_hint"/>

        <Button
            android:id="@+id/button_save"
            android:tag="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:paddingHorizontal="6dp"
            android:background="@drawable/bt_settings_bg"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/settings_save"/>

    </LinearLayout>

    <!-- L2 - Notifications -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="6dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/settings_notification"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_notification"
            android:tag="@string/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="24dp"/>

    </LinearLayout>

</LinearLayout>