<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/logo_full">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="0dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_go4lunch"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:contentDescription="@string/ic_app_logo"
        android:id="@+id/app_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="64sp"
        android:textColor="@color/white"
        android:id="@+id/app_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/app_desc"
        android:textColor="@color/white"
        android:id="@+id/app_desc"/>

</LinearLayout>